# petramond

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
assets/: biomes.json  blocks.json  effects.json  features.json  items.json  loot_tables.json  mobs.json  models.json  particle_emitters.json  recipes.json  shaders.json  sounds.json
gui-builder/: .gitignore  Cargo.toml  README.md
gui-builder/assets/presets/: alert.json  labeled_slider.json  mod_list.json  tab_bar.json  titled_section.json
gui-builder/samples/: chest.llgui  connect_server.llgui  connection_lost.llgui  crafting_table.llgui  create_world.llgui  death.llgui  delete_world.llgui  demo.llgui  furnace.llgui  furniture_workbench.llgui  hotbar.llgui  inventory.llgui  mods_missing.llgui  options.llgui  options_controls.llgui  options_graphics.llgui  options_sound.llgui  pause.llgui  sleep.llgui  title.llgui  world_select.llgui  world_settings.llgui
gui-builder/src/: app.rs  assets.rs  bake.rs  bindings.rs  canvas.rs  contracts.rs  doc_edit.rs  history.rs  icons.rs  io.rs  legacy_import.rs  main.rs  model.rs  preview.rs  project.rs  theme_bar.rs  theme_src.rs  ui.rs
gui-builder/src/panels/: doc_tree.rs  inspector.rs  mod.rs  palette.rs  screen_data.rs  validation.rs
guis/: chest (copy).llgui  chest.llgui  crafting_table.llgui  create_world.llgui  delete_world.llgui  furnace.llgui  furniture_workbench.llgui  hotbar.llgui  pause.llgui  title.llgui  world_select.llgui
llama-ui/: Cargo.toml
llama-ui/examples/: render_demo.rs
llama-ui/src/: doc.rs  input.rs  interact.rs  layout.rs  lib.rs  paint.rs  paint_walk.rs  raster.rs  runtime.rs  state.rs  text.rs  theme.rs  tree.rs  validate.rs  widget.rs
mod-api/: Cargo.toml
mod-api/src/: biome.rs  client.rs  data.rs  events.rs  ids.rs  lib.rs  protocol.rs  sched.rs  shape.rs  wire.rs  wire_pin.rs
mod-api/src/protocol/: guest.rs  host.rs  tests.rs
mod-sdk/: Cargo.toml
mod-sdk/src/: __rt.rs  bytes.rs  client.rs  containers.rs  core_calls.rs  entities.rs  gui.rs  kv.rs  lib.rs  player.rs  registry.rs  sounds.rs  tags.rs  world.rs  worldgen.rs
mods-src/: Cargo.toml
mods-src/.cargo/: config.toml
mods-src/daynight/: Cargo.toml
mods-src/daynight/pack/: pack.json  shaders.json
mods-src/daynight/pack/shaders/: daynight_sky.wgsl
mods-src/daynight/src/: lib.rs
mods-src/farming/: Cargo.toml
mods-src/farming/pack/: blocks.json  effects.json  items.json  mobs.json  models.json  pack.json  particle_emitters.json  recipes.json  sounds.json
mods-src/farming/pack/models/: composter.bbmodel  farmers_workbench.bbmodel  lamb.bbmodel  trough.bbmodel
mods-src/farming/pack/textures/: atlas.json
mods-src/farming/src/: compost.rs  content.rs  crops.rs  farmland.rs  fertilize.rs  follow.rs  forage.rs  growth.rs  husbandry.rs  kv_counter.rs  lib.rs  predict.rs  spread.rs  tilling.rs  trough.rs  wellfed.rs  worldgen.rs
mods-src/furniture/: Cargo.toml
mods-src/furniture/pack/: blocks.json  items.json  models.json  pack.json  recipes.json  shapes.json
mods-src/furniture/pack/models/: bench.bbmodel  chair.bbmodel  chandelier.bbmodel
mods-src/furniture/pack/textures/: atlas.json
mods-src/furniture/src/: lib.rs
mods-src/kitchen/: Cargo.toml
mods-src/kitchen/pack/: blocks.json  items.json  loot_tables.json  models.json  pack.json  recipes.json
mods-src/kitchen/pack/models/: kitchen_oven.bbmodel  miller.bbmodel
mods-src/kitchen/pack/textures/: atlas.json
mods-src/kitchen/pack/ui/documents/: miller.gui.json  oven.gui.json
mods-src/kitchen/src/: lib.rs  machine.rs  miller.rs  oven.rs
mods-src/minimap/: Cargo.toml
mods-src/minimap/pack/: pack.json
mods-src/minimap/pack/ui/documents/: minimap_create.gui.json  minimap_edit.gui.json
mods-src/minimap/src/: codec.rs  explore.rs  fullmap.rs  hud.rs  lib.rs  raster.rs  waypoints.rs
mods-src/monsters/: Cargo.toml
mods-src/monsters/pack/: mobs.json  pack.json  sounds.json
mods-src/monsters/pack/models/: hushjaw.bbmodel
mods-src/monsters/src/: lib.rs
mods-src/smoke/: Cargo.toml
mods-src/smoke/pack/: blocks.json  items.json  pack.json
mods-src/smoke/pack/textures/gui/baked/: smoke_panel.json
mods-src/smoke/pack/ui/documents/: smoke_panel.gui.json
mods-src/smoke/src/: lib.rs
mods-src/vehicles/: Cargo.toml
mods-src/vehicles/pack/: items.json  loot_tables.json  mobs.json  pack.json  recipes.json
mods-src/vehicles/pack/models/: boat.bbmodel
mods-src/vehicles/pack/textures/: atlas.json
mods-src/vehicles/src/: lib.rs
mods-src/weather/: Cargo.toml
mods-src/weather-core/: Cargo.toml
mods-src/weather-core/src/: lib.rs
mods-src/weather/pack/: pack.json  particle_emitters.json  shaders.json  sounds.json
mods-src/weather/pack/shaders/: clouds.wgsl
mods-src/weather/src/: lib.rs
mods-src/wheel/: Cargo.toml
mods-src/wheel/pack/: blocks.json  items.json  pack.json  recipes.json
mods-src/wheel/pack/textures/: atlas.json
mods-src/wheel/pack/textures/gui/baked/: wheel_wheel.json
mods-src/wheel/pack/ui/documents/: wheel.gui.json
mods-src/wheel/src/: lib.rs
mods-src/zombies/: Cargo.toml
mods-src/zombies/pack/: mobs.json  pack.json  sounds.json
mods-src/zombies/pack/models/: zombie.bbmodel
mods-src/zombies/src/: lib.rs
petramond-text/: Cargo.toml
petramond-ui/: Cargo.toml
scripts/: build_web.sh
src/: app.rs  asset_cache.rs  assets.rs  atlas.rs  bbmodel.rs  biome.rs  block.rs  block_model.rs  block_state.rs  body.rs  camera.rs  chest.rs  chunk.rs  collision.rs  column.rs  connect.rs  container.rs  controls.rs  damage.rs  door.rs  effect.rs  facing.rs  fence.rs  furnace.rs  game.rs  gen.rs  gui.rs  inventory.rs  ladder.rs  lib.rs  main.rs  mathh.rs  mesh.rs  mining.rs  pane.rs  particle_emitters.rs  perf.rs  platform.rs  player.rs  registry.rs  (+11 more)
src/app/: chat.rs  (+16 more)
web/: dev_server.py  index.html  llamacraft.d.ts  llamacraft.js  llamacraft_bg.wasm  llamacraft_bg.wasm.d.ts  main.js  worker_host.js  worker_wasm.d.ts  worker_wasm.js  worker_wasm_bg.wasm  worker_wasm_bg.wasm.d.ts
worker_wasm/: Cargo.toml
(+707 files in other folders)
