[package]
name = "llamacraft"
version = "0.1.0"
edition = "2021"
authors = ["rachel"]
description = "A noise-based voxel world biomes + features."
license = "MIT"

[workspace]
members = ["."]
resolver = "2"

[lib]
crate-type = ["rlib"]

[features]
# Worldgen tests are slow (heavy noise/terrain generation) and worldgen is stable,
# so they are opt-in: run them with `cargo test --features worldgen-tests`. Plain
# `cargo test` skips them — the worldgen test modules are gated
# `#[cfg(all(test, feature = "worldgen-tests"))]`.
worldgen-tests = []

[[bin]]
name = "llamacraft_native"
path = "src/bin/native.rs"

# Throwaway worldgen byte-parity gate used during the Strata refactor.
[[bin]]
name = "genparity"
path = "src/bin/genparity.rs"

# Headless top-down worldgen previewer (dev tool).
[[bin]]
name = "genmap"
path = "src/bin/genmap.rs"

# Throwaway perf harness: times worldgen + meshing over a chunk grid.
[[bin]]
name = "perfbench"
path = "src/bin/perfbench.rs"

[dependencies]
wgpu = "27"
winit = { version = "0.30", features = ["rwh_06"] }
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck", "serde"] }
noise = { version = "0.9", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
rayon = "1.10"
env_logger = "0.11"
directories = "5"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
