[package]
name = "petramond"
version = "0.1.0"
edition = "2021"
authors = ["rachel"]
description = "A noise-based voxel world biomes + features."
license = "MIT"

[workspace]
members = [".", "mod-api", "petramond-ui"]
# The GUI builder (./gui-builder) is a standalone tool crate with its own deps;
# keep it out of the game's workspace so it doesn't affect the game build.
# mod-sdk is guest-side only (linked into mods, never the engine) and mods-src
# is its own wasm32 workspace built by `make mods` — both stay out for the same
# reason.
exclude = ["gui-builder", "mod-sdk", "mods-src"]
resolver = "2"

[lib]
crate-type = ["rlib"]

[features]
default = ["audio"]
# Client sound PLAYBACK (rodio → cpal → ALSA on Linux). Off, `crate::audio::Audio`
# is a signature-identical silent stub and no audio system library is needed at
# build or run time — how the headless server builds on machines without
# libasound: `cargo build --release --no-default-features --bin petramond_server`.
# The sound REGISTRY (names/defs the sim and net tables use) is always compiled.
audio = ["dep:rodio"]
# Worldgen tests are slow (heavy noise/terrain generation) and worldgen is stable,
# so they are opt-in: run them with `cargo test --features worldgen-tests`. Plain
# `cargo test` skips them — the worldgen test modules are gated
# `#[cfg(all(test, feature = "worldgen-tests"))]`.
worldgen-tests = []

[[bin]]
name = "petramond_native"
path = "src/bin/native.rs"
# The playable client must never silently ship without sound: building it
# featureless is an error, not a quiet degradation.
required-features = ["audio"]

# Headless dedicated server: the same ServerGame/loop the in-game
# "Open to LAN" runs, with no local session and no renderer.
[[bin]]
name = "petramond_server"
path = "src/bin/server.rs"

# Headless top-down worldgen previewer (dev tool).
[[bin]]
name = "genmap"
path = "src/bin/genmap.rs"

# Headless individual feature previewer (dev tool).
[[bin]]
name = "genfeature"
path = "src/bin/genfeature.rs"

[dependencies]
# Renderer-agnostic GUI runtime (documents, layout, theme, widgets, paint) —
# shared with the gui-builder so its preview is pixel-exactly the game's UI.
petramond-ui = { path = "petramond-ui" }
wgpu = "27"
winit = { version = "0.30", features = ["rwh_06"] }
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck", "serde"] }
noise = { version = "0.9", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
rayon = "1.10"
env_logger = "0.11"
directories = "5"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
# Audio playback (cpal output + symphonia ogg/vorbis decode only — no mp3/flac/wav/
# recording), kept lean like `image`/`noise`. Used by `crate::audio`; optional
# behind the default-on `audio` feature (headless server builds exclude it).
rodio = { version = "0.22", default-features = false, features = ["playback", "vorbis"], optional = true }
mimalloc = "0.1.52"
# Fast fixed-seed hasher for the per-voxel hot maps (world sections, A* scratch,
# tick/mesh sets) — std's SipHash is a keyed cryptographic hash and its cost
# shows up in collision/water/pathing loops that hit these maps per cell.
rustc-hash = "2"
# Per-thread scheduling priority (setpriority/gettid) for background worker pools.
libc = "0.2"
# Native desktop clipboard access for text fields.
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
# --- Modding host (WIKI/modding.md Phase 2b) ---
# Shared engine↔mod ABI types (postcard enums).
mod-api = { path = "mod-api" }
postcard = { version = "1", default-features = false, features = ["alloc"] }
# WASM runtime for mod logic. Deliberately minimal features: core modules only —
# no wasi, no component model, no async, no gc, no wat parsing, no parallel
# compilation — to keep compile time and binary size down.
wasmtime = { version = "46", default-features = false, features = ["cranelift", "runtime"] }

[dev-dependencies]
# Tests hand-build hostile guest modules from WAT text (trap/registration-window
# contracts); the shipped binary never parses wat.
wasmtime = { version = "46", default-features = false, features = ["cranelift", "runtime", "wat"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Day-to-day playtest profile (`make run`): release-grade opt-level but with
# incremental compilation, parallel codegen units and no LTO, so a one-file
# change rebuilds in seconds instead of recompiling the whole crate as one LTO
# unit (~48s measured). CGU count / LTO do not change float semantics (genparity
# COMBINED verified identical to release); keep `release` for shipped builds.
[profile.playtest]
inherits = "release"
lto = "off"
codegen-units = 16
incremental = true
strip = false

[profile.dev]
opt-level = 1
