[package]
name = "llama-ui"
version = "0.1.0"
edition = "2021"
description = "Renderer-agnostic GUI runtime: documents, layout, theme, widgets, paint."
license = "MIT"

[features]
# Software rasterizer for the DrawList (builder preview + headless tests).
raster = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
bytemuck = { version = "1.21", features = ["derive"] }
