# The mod source workspace: every crate here builds to a wasm32 core module
# installed into `mods/<id>/mod.wasm` by `make mods`. Deliberately separate
# from the engine workspace (different target, different profiles).
[workspace]
resolver = "2"
members = ["farming", "kitchen", "minimap", "wheel", "monsters", "vehicles"]

# Guests must abort (trap) on panic — the host treats a trap as "disable the
# mod for this session, keep ticking". Speed over size: bundled mod wasm runs
# raster/codec hot loops on the frame, and the size delta is a few hundred KB.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.playtest]
inherits = "dev"
opt-level = 1
