[package]
name = "monsters"
version = "0.1.0"
edition = "2021"
description = "Hostile-monster mod: light-based zombie spawning driven by petramond time, sunburn, data-driven mob sounds, and chase + melee combat."
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
mod-sdk = { path = "../../mod-sdk" }
